--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,20 @@
+/** import font family */
+@font-face {
+  font-family: 'IBM Plex Sans Arabic';
+  font-style: normal;
+  font-weight: 400;
+  src: url(/public/assets/fonts/IBMPlexSansArabic/IBMPlexSansArabic-Regular.ttf) format('woff2');
+}
 
+
+/** global styles */
 :root {
-  --color-primary: #222831;
-  --color-secondary: #00adb5;
-  --color-light: #a0a2a6;
-  --color-dark: #343840;
-  --color-white: #fff;
-  --color-black: #000;
+  --color-green: #0b6860;
+  --color-blue-light: #0b3e8a;
+  --color-blue-dark: #0d2d6c;
+  --color-blue-dark2: #061d38;
+  --color-light: #f5f7f7;
+  --font-Sans: 'IBM Plex Sans Arabic', sans-serif;
 }
 
 * {
@@ -14,11 +23,28 @@
 }
 
 body {
-  background-color: var(--color-primary);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: var(--color-light);
+  font-family: var(--font-Sans);
 }
 
 
 a, a:hover {
   text-decoration: none;
+}
+
+::selection {
+  background: var(--color-green);
+  color: var(--bs-white);
+}
+
+body::-webkit-scrollbar {
+  width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: var(--color-light);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--color-green);
 }
