--- a/src/components/Typography/style.css
+++ b/src/components/Typography/style.css
@@ -20,6 +20,31 @@
     margin-bottom: 0.6rem;
 }
 
+/** h2 white blue */
+.h2_white__blue {
+    font-size: 2.8rem;
+    color: var(--bs-white);
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+.h2_white__blue span {
+    position: relative;
+    z-index: 100;
+}
+
+.h2_white__blue h2 span::after {
+    content: "";
+    position: absolute;
+    bottom: 20px;
+    right: 0;
+    left: -10px;
+    height: 1rem;
+    z-index: -1;
+    width: 115%;
+    background-color: var(--color-blue-dark);
+}
+
 /** footer h4 */
 .footer_h4 {
     color: var(--bs-white);
