--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -7,6 +7,24 @@
     background-size: cover;
 }
 
+
+#hero h1 {
+    color: var(--color-green);
+    text-decoration: underline;
+    margin-bottom: 0.6rem;
+}
+
+#hero h2 {
+    color: var(--color-blue-light);
+    margin-bottom: 0.6rem;
+}
+
+#hero p {
+    color: var(--bs-dark);
+    margin-bottom: 0.6rem;
+}
+
+
 @media (max-width: 767px) {
 
     #hero {
