--- a/src/components/Typography/style.css
+++ b/src/components/Typography/style.css
@@ -8,21 +8,162 @@
 /** h1 */
 .t_h1 {
     font-size: 2.8rem;
-    color: var(--color-green);
-    text-decoration: underline;
-    margin-bottom: 0.6rem;
+    line-height: 3rem;
 }
 
 /** h2 */
 .t_h2 {
-    font-size: 2.8rem;
-    color: var(--color-blue-light);
-    margin-bottom: 0.6rem;
+    font-size: 2.5rem;
+    line-height: 2.9rem;
 }
+
+/** h3 */
+.t_h3 {
+    font-size: 2.2rem;
+    line-height: 2.8rem;
+}
+
+/** h4 */
+.t_h4 {
+    font-size: 1.9rem;
+    line-height: 2.5rem;
+}
+
+/** h5 */
+.t_h5 {
+    font-size: 1.6rem;
+    line-height: 2.2rem;
+}
+
+/** h6 */
+.t_h6 {
+    font-size: 1.3rem;
+    line-height: 1.9rem;
+}
+
+
+/****
+ * Paragraphs *
+*****/
+
+/** body-1 */
+.t_body1 {
+    font-size: 1.3rem;
+    line-height: 2rem;
+}
+
+/** body-2 */
+.t_body2 {
+    font-size: 1.1rem;
+    line-height: 1.8rem;
+}
+
+/** body-3 */
+.t_body3 {
+    font-size: 1rem;
+    line-height: 1.6rem;
+}
+
+/****
+ * Span *
+*****/
+
+/** Span-1 */
+.t_span1 {
+    font-size: 0.8rem;
+    font-weight: 600;
+}
+
+/** Span-1 */
+.t_span2 {
+    font-size: 0.7rem;
+    font-weight: 600;
+}
+
+/** Span-1 */
+.t_span3 {
+    font-size: 0.6rem;
+    font-weight: 600;
+}
+
+
+/****
+ * Media Query ***************
+*****/
+@media (max-width: 767px) {
+
+    /****
+     * Headings *
+    *****/
+
+    /** h1 */
+    .t_h1 {
+        font-size: 2rem;
+        line-height: 2rem;
+    }
+
+    /** h2 */
+    .t_h2 {
+        font-size: 1.8rem;
+        line-height: 1.9rem;
+    }
+
+    /** h3 */
+    .t_h3 {
+        font-size: 1.6rem;
+        line-height: 1.8rem;
+    }
+
+    /** h4 */
+    .t_h4 {
+        font-size: 1.3rem;
+        line-height: 1.5rem;
+    }
+
+    /** h5 */
+    .t_h5 {
+        font-size: 1.1rem;
+        line-height: 1.2rem;
+    }
+
+    /** h6 */
+    .t_h6 {
+        font-size: 0.9rem;
+        line-height: 1rem;
+    }
+
+
+
+    /****
+     * Paragraphs *
+    *****/
+
+    /** body-1 */
+    .t_body1 {
+        font-size: 1.2rem;
+        line-height: 2rem;
+    }
+
+    /** body-2 */
+    .t_body2 {
+        font-size: 1rem;
+        line-height: 1.7rem;
+    }
+
+    /** body-3 */
+    .t_body3 {
+        font-size: 0.9rem;
+        line-height: 1.5rem;
+    }
+
+}
+
+/****
+ * Custom Typography *
+ *****/
 
 /** h2 white blue */
 .h2_white__blue {
-    font-size: 2.8rem;
     color: var(--bs-white);
     text-align: center;
     margin-bottom: 1.5rem;
@@ -46,7 +187,7 @@
 }
 
 /** footer h4 */
-.footer_h4 {
+.footer_h5 {
     color: var(--bs-white);
     margin-bottom: 1rem;
     margin-right: 0.5rem;
@@ -54,7 +195,7 @@
     z-index: 20;
 }
 
-.footer_h4::after {
+.footer_h5::after {
     content: "";
     position: absolute;
     bottom: 10px;
@@ -64,52 +205,4 @@
     z-index: -1;
     width: 50%;
     background-color: var(--color-green);
-}
-
-
-
-
-/****
- * Paragraphs *
-*****/
-
-/** body-1 */
-.t_body1 {
-    font-size: 1.3rem;
-    color: var(--bs-dark);
-    margin-bottom: 0.6rem;
-}
-
-
-
-/****
- * Media Query ***************
-*****/
-@media (max-width: 767px) {
-
-    /****
-     * Headings *
-    *****/
-
-    /** h1 */
-    .t_h1 {
-        font-size: 2.5rem;
-    }
-
-    /** h2 */
-    .t_h2 {
-        font-size: 2.3rem;
-    }
-
-
-
-    /****
-     * Paragraphs *
-    *****/
-
-    /** body-1 */
-    .t_body1 {
-        font-size: 1.2rem;
-    }
-
 }
