--- a/src/components/Typography/style.css
+++ b/src/components/Typography/style.css
@@ -188,14 +188,27 @@
 
 
 /** h2 dark blue */
+.h2_dark__blue {
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
 .h2_dark__blue h2 {
     color: var(--bs-dark);
-    text-align: center;
 }
 
 .h2_dark__blue>h2>span {
     color: var(--color-blue-light);
     text-decoration: underline;
+}
+
+.h2_dark__blue>span {
+    display: inline-block;
+    margin-top: 0.7rem;
+    border-radius: 5px;
+    height: 0.5rem;
+    width: 8rem;
+    background-color: var(--color-blue-dark);
 }
 
 
